--- a/css/index.css
+++ b/css/index.css
@@ -14,3 +14,60 @@
   stroke-linejoin: miter;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.constituency:hover {
+  stroke-width: 2px;
+  cursor: pointer;
+}
+
+div.tooltip {	
+  position: absolute;						
+  width: 200px;					
+  min-height: 80px;					
+  padding: 2px;				
+  font: 8px Arial, Helvetica, sans-serif;
+  color: rgb(75, 75, 75);	
+  background: white;	
+  border: 1px solid lightgray;
+  border-radius: 2px;			
+  pointer-events: none;
+  opacity: 0;
+  padding: 10px;
+}
+
+.constituency {
+  font-size: 12px;
+  font-weight: bold;
+  border-bottom: 1px solid black;
+  padding: 0px 5px 5px 0px;
+  color: black;
+}
+
+.party-container{
+  display: grid;
+  grid-template-columns: 30% 70%;
+}
+
+.name {
+  font-size: 18px;
+  margin: 0;
+}
+
+.gender {
+  font-size: 12px;
+  margin: 0;
+}
+
+.share {
+  font-size: 10px;
+  margin: 0;
+}
+
+.party-logo{
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgb(196, 196, 196);
+  padding: 5px;
+  border-radius: 1px;
+  box-sizing: border-box;
+}
