--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,20 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 #content{
-  position: absolute;
-  top: 20;
-  left: 20;
+  width: 50%;
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 5px;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: -1;
+  border-right: solid 1px lightgray;
 }
 
 .hidden {
