--- a/css/index.css
+++ b/css/index.css
@@ -100,3 +100,9 @@ div.tooltip {
   border-radius: 1px;
   box-sizing: border-box;
 }
+
+.user-input {
+  position: absolute;
+  right: 100px;
+  top: 100px;
+}
