--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,10 @@ body {
   visibility: hidden;
 }
 
+.none {
+  display: none !important; 
+}
+
 .cities {
   opacity: 0.9;
   transition: all 0.2s ease-in-out;
@@ -52,7 +56,6 @@ body {
 }
 
 div.tooltip {	
-  display: none;
   position: absolute;						
   width: 200px;					
   min-height: 80px;					
@@ -65,6 +68,30 @@ div.tooltip {
   opacity: 0;
   padding: 10px;
   transition: all 0.2s ease-in-out;
+}
+
+.tooltip .section {
+  border-top: 1px solid lightgray;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+
+.tooltip .section.changed {
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
+
+.tooltip .section.gender {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.tooltip .changed .gain {
+  padding: 5px;
+  color: black;
+  font-size: 12px;
+  margin-right: 5px;
+  font-weight: bold;
 }
 
 .tooltip .constituency {
@@ -111,4 +138,14 @@ div.tooltip {
   position: absolute;
   right: 100px;
   top: 100px;
+}
+
+.gender-chart-text {
+  font-size: 12px;
+}
+
+.tooltip .text {
+  font-size: 15px;
+  font-weight: normal;
+  margin: 0;
 }
