--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 #content{
-  width: 50%;
+  width: 100%;
   height: 100vh;
   box-sizing: border-box;
   margin: 0;
@@ -14,7 +14,6 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  border-right: solid 1px lightgray;
 }
 
 .hidden {
@@ -135,9 +134,10 @@ div.tooltip {
 }
 
 .user-input {
+  width: 200px;
   position: absolute;
-  right: 100px;
-  top: 100px;
+  right: 20px;
+  top: 20px;
 }
 
 .gender-chart-text {
