--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -10;
 }
 
 #content{
@@ -13,7 +17,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: -5;
 }
 
 .hidden {
@@ -60,13 +64,14 @@ div.tooltip {
   min-height: 80px;					
   padding: 2px;				
   color: rgb(75, 75, 75);	
-  background: white;	
+  background: rgba(255, 255, 255, 0.7);	
   border: 1px solid lightgray;
   border-radius: 2px;			
   pointer-events: none;
   opacity: 0;
   padding: 10px;
   transition: all 0.2s ease-in-out;
+  z-index: -1;
 }
 
 .tooltip .section {
@@ -134,10 +139,30 @@ div.tooltip {
 }
 
 .user-input {
-  width: 200px;
+  width: 300px;
   position: absolute;
   right: 20px;
   top: 20px;
+  z-index: -3;
+}
+
+.details {
+  width: 300px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  border: solid 1px #eee;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 30px;
+  z-index: -3;
+}
+
+.details .header {
+  font-size: 20px;
+  font-weight: 100;
+  margin: 5px 0;
+  text-align: right;
+  color: grey
 }
 
 .gender-chart-text {
