--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@ body {
   height: 100vh;
   position: absolute;
   z-index: -10;
+  display: grid;
+  grid-template-columns: 80% 20%;
 }
 
 #content{
@@ -133,25 +135,26 @@ div.tooltip {
   width: 50px;
   height: 50px;
   border: 1px solid rgb(196, 196, 196);
+  background-color: white;
   padding: 5px;
   border-radius: 1px;
   box-sizing: border-box;
 }
 
 .user-input {
-  width: 300px;
+  width: 350px;
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 30px;
+  top: 30px;
+  background: rgba(255, 255, 255, 0.7);
+  padding: 30px;
   z-index: -3;
 }
 
 .details {
   position: absolute;
-  right: 0;
-  bottom: 0;
-  border: solid 1px #eee;
-  border-radius: 4px 0 0 0;
+  right: 30px;
+  bottom: 30px;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 10px 30px 30px 30px;
   z-index: -3;
@@ -173,4 +176,25 @@ div.tooltip {
   font-size: 15px;
   font-weight: normal;
   margin: 0;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.highlightable {
+  transition: all 150ms ease-in-out;
+}
+
+.highlightable:hover {
+ fill: rgb(253, 101, 101);
 }
