--- a/css/index.css
+++ b/css/index.css
@@ -2,15 +2,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   position: absolute;
   z-index: -10;
   background-color: rgb(211, 233, 236);
+  overflow: hidden;
 }
 
 #content{
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   box-sizing: border-box;
   margin: 0;
@@ -65,7 +66,6 @@ div.tooltip {
   min-height: 80px;					
   padding: 2px;				
   color: rgb(75, 75, 75);	
-  background: rgba(255, 255, 255, 0.7);	
   border: 1px solid lightgray;
   border-radius: 2px;			
   pointer-events: none;
@@ -144,8 +144,7 @@ div.tooltip {
   width: 350px;
   position: absolute;
   right: 30px;
-  top: 30px;
-  background: rgba(255, 255, 255, 0.7);
+  top: 20px;
   padding: 30px;
   z-index: -3;
 }
@@ -154,7 +153,6 @@ div.tooltip {
   position: absolute;
   right: 30px;
   bottom: 30px;
-  background-color: rgba(255, 255, 255, 0.7);
   padding: 10px 30px 30px 30px;
   z-index: -3;
 }
@@ -185,6 +183,7 @@ div.tooltip {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .card:hover {
@@ -223,21 +222,20 @@ a:hover{
 .map-controls {
   position: absolute;
   left: 20px;
-  bottom: 20px;
+  bottom: 30px;
   margin: 0;
   padding: 0;
+  z-index: -4;
 }
 
 .map-controls .box {
   width: 30px;
   height: 30px; 
-  background-color: rgba(255, 255, 255, 0.7);
   padding: 6px;
   margin: 5px;
   font-size: 15px;
   box-sizing: border-box;
   text-align: center;
-  font-weight: 100;
 }
 
 .title-box {
@@ -246,8 +244,9 @@ a:hover{
   top: 20px;
   margin: 0;
   padding: 10px 15px;
-  background-color: rgba(255, 255, 255, 0.7);
   transition: all 0.3s ease-in-out;
+  z-index: -4;
+  max-width: 280px;
 }
 
 .title-box #title {
@@ -261,4 +260,95 @@ a:hover{
   font-weight: 200;
   padding: 0;
   margin: 0;
+}
+
+.toggle {
+  display: none;
+}
+
+@media screen and (max-width: 770px) {
+  .collapsed {
+    right: -410px !important;
+  }
+
+  .details {
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.85);
+    padding-bottom: 0;
+  }
+
+  .user-input {
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.85);
+    padding-top: 0;
+  }
+
+  .toggle {
+    display: block;
+    width: 30px;
+    height: 50px; 
+    padding: 15px 6px;
+    margin: 0px;
+    font-size: 15px;
+    box-sizing: border-box;
+    text-align: center;
+    position: relative;
+  }
+
+  .collapsed .t-details {
+    right: 60px;
+  }
+
+  .t-details {
+    top: 0px;
+    right: 30px;
+  }
+
+  .collapsed .i-details {
+    right: 60px;
+  }
+
+  .i-details {
+    top: 0px;
+    right: 30px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .details {
+    width: 375px;
+    padding-left: 5px;  
+    box-sizing: border-box;
+  }
+
+  .collapsed .t-details {
+    right: 35px;
+  }
+
+  .t-details {
+    right: 5px;
+  }
+
+  .user-input {
+    width: 375px;
+    box-sizing: border-box;
+  }
+
+  .collapsed {
+    right: -375px !important;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .details {
+    width: 320px;
+  }
+
+  .user-input {
+    width: 320px;
+  }
+
+  .collapsed {
+    right: -320px !important;
+  }
 }
