--- a/views/about.html
+++ b/views/about.html
@@ -20,7 +20,7 @@
       
       <p>This project aims to help get a deeper understanding of the UK political landscape leveraging available data on <a href="https://www.parliament.uk/">The Parliament of the United Kingdom of Great Britain and Northern Ireland</a>.</p>
       
-      <p>It currently allows visualisation of data from the <a href="https://www.parliament.uk/business/commons/">House of Commons</a> for the <a href="https://en.wikipedia.org/wiki/2017_United_Kingdom_general_election">2017 General Election</a>.</p>
+      <p>It currently allows visualisation of data from the <a href="https://www.parliament.uk/business/commons/">House of Commons</a> for the <a href="https://en.wikipedia.org/wiki/2019_United_Kingdom_general_election">2019</a> and <a href="https://en.wikipedia.org/wiki/2017_United_Kingdom_general_election">2017</a> General Election.</p>
       
       <h2>Supported Maps</h2>
       The dashboard currently supports the following maps:
@@ -51,7 +51,7 @@
       
       <ul>
         <li>
-            <a href="https://en.wikipedia.org/wiki/2017_United_Kingdom_general_election">2017 General Election</a> data from the <a href="https://commonslibrary.parliament.uk/parliament-and-elections/elections-elections/constituency-data-election-results/">House of Commons Library</a>
+            <a href="https://en.wikipedia.org/wiki/2019_United_Kingdom_general_election">2019</a> and <a href="https://en.wikipedia.org/wiki/2017_United_Kingdom_general_election">2017</a> General Election data from the <a href="https://commonslibrary.parliament.uk/parliament-and-elections/elections-elections/constituency-data-election-results/">House of Commons Library</a>
         </li>
         <li>
             Map of the United Kingdom from <a href="https://github.com/martinjc">Dr Martin Chorley</a> GitHub <a href="https://github.com/martinjc/UK-GeoJSON">repo</a>
